imports.tf
import {
  to = aws_instance.example
  id = "i-ab45cd12febc34"
}

resource "aws_instance" "example" {
  name = "hashi"
  # (other resource arguments...)
}
